# spanshot

./: .gitignore  CLAUDE.md  README.md  codecov.yml  flake.nix  justfile  opencode.json  users.json
.claude/commands/: speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.github/workflows/: ci.yml  nix-main.yml  nix-pr.yml  nix.yml  readme-sync.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: usage-examples.md
hs-spanshot/: CHANGELOG.md  LICENSE  cabal.project  hie.yaml  hs-spanshot.cabal  justfile
hs-spanshot/app/: LogGenerator.hs  Main.hs
hs-spanshot/src/: Capture.hs  Client.hs  Collect.hs  Config.hs  Session.hs  Storage.hs  Types.hs  Wrap.hs
hs-spanshot/src/Daemon/: ConfigWatcher.hs  Core.hs  Process.hs  Protocol.hs  Server.hs  State.hs  Types.hs
hs-spanshot/src/Session/: Pty.hs  State.hs
hs-spanshot/test/: CLIIntegration.hs  CaptureStreamSpec.hs  CaptureTypesSpec.hs  CollectionSpec.hs  ConfigSpec.hs  DaemonConfigWatcherSpec.hs  DaemonProcessSpec.hs  DaemonProtocolSpec.hs  DaemonServerSpec.hs  DaemonStateSpec.hs  DetectionSpec.hs  Fixtures.hs  Main.hs  SerializationProperties.hs  SessionStateSpec.hs  StorageSpec.hs  WindowManagementSpec.hs  WrapSpec.hs
hs-spanshot/test/fixtures/: config.yaml  error-generator.sh
nix/: apps.nix  autodocodec.nix  devshell.nix  formatting.nix  opt-env-conf.nix  packages.nix
nix/secrets/: CACHIX_AUTH_TOKEN.age  CODECOV_TOKEN.age  PAT_CODEX_SPANSHOT_WRITE.age  default.nix  secrets.nix
prompts/: code-review.md  readme-sync.md
secrets/: secrets.nix
specs/001-speckit-bootstrap/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-speckit-bootstrap/checklists/: requirements.md
specs/002-capture-phase/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-capture-phase/checklists/: requirements.md
specs/002-capture-phase/contracts/: cli-commands.md
specs/003-dev-input-modes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-dev-input-modes/checklists/: requirements.md
specs/004-daemon-otel-mode/: design-rationale.md  spec.md
specs/004-daemon-otel-mode/checklists/: requirements.md
