cabal-version:      3.14
name:               hs-spanshot
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alberto Fanton
maintainer:         alberto.fanton@protonmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Types
        Collect
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base >=4.19.2.0 && <5,
        aeson ^>=2.2,
        bytestring ^>=0.12,
        streaming ^>=0.2,
        streaming-bytestring ^>=0.3,
        text ^>=2.1,
        time ^>=1.12
    hs-source-dirs:   src
    default-language: GHC2024

executable spanshot
    import:           warnings
    main-is:          Main.hs
    other-modules:    Paths_hs_spanshot
    -- other-extensions:
    build-depends:
        base >=4.19.2.0 && <5,
        aeson ^>=2.2,
        bytestring ^>=0.12,
        hs-spanshot,
        opt-env-conf ^>=0.5,
        streaming ^>=0.2

    hs-source-dirs:   app
    default-language: GHC2024

test-suite hs-spanshot-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.19.2.0 && <5,
        aeson ^>=2.2,
        bytestring ^>=0.12,
        directory ^>=1.3,
        filepath ^>=1.5,
        hs-spanshot,
        hspec ^>=2.11,
        process ^>=1.6,
        streaming ^>=0.2,
        tasty ^>=1.5,
        tasty-hspec ^>=1.2,
        temporary ^>=1.3,
        text ^>=2.1,
        time ^>=1.12
