cabal-version:      3.14
name:               hs-spanshot
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alberto Fanton
maintainer:         alberto.fanton@protonmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    default-extensions:
        ImportQualifiedPost
        OverloadedStrings
        TypeApplications

library
    import:           warnings
    exposed-modules:  
        Types
        Config
        Collect
        Capture
        Daemon.Types
        Daemon.State
        Daemon.Protocol
        Daemon.Process
        Daemon.Server
        Daemon.ConfigWatcher
        Daemon.Core
        Client
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base >=4.19.2.0 && <5,
        aeson ^>=2.2,
        async ^>=2.2,
        bytestring ^>=0.12,
        containers ^>=0.6,
        directory ^>=1.3,
        filepath ^>=1.5,
        fsnotify ^>=0.4,
        network ^>=3.1,
        regex-tdfa ^>=1.3,
        stm ^>=2.5,
        streaming ^>=0.2,
        streaming-bytestring ^>=0.3,
        text ^>=2.1,
        time ^>=1.12,
        yaml ^>=0.11
    if !os(windows)
        build-depends: unix ^>=2.8
    hs-source-dirs:   src
    default-language: GHC2024

executable spanshot
    import:           warnings
    main-is:          Main.hs
    other-modules:    Paths_hs_spanshot
    -- other-extensions:
    build-depends:
        base >=4.19.2.0 && <5,
        aeson ^>=2.2,
        bytestring ^>=0.12,
        hs-spanshot,
        opt-env-conf ^>=0.11,
        streaming ^>=0.2,
        text ^>=2.1,
        yaml ^>=0.11

    hs-source-dirs:   app
    default-language: GHC2024

test-suite hs-spanshot-test
    import:           warnings
    default-language: GHC2024
    other-modules:
        CollectionSpec
        CaptureTypesSpec
        CaptureStreamSpec
        ConfigSpec
        DetectionSpec
        SerializationProperties
        WindowManagementSpec
        Fixtures
        DaemonStateSpec
        DaemonProtocolSpec
        DaemonProcessSpec
        DaemonServerSpec
        DaemonConfigWatcherSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.19.2.0 && <5,
        aeson ^>=2.2,
        async ^>=2.2,
        bytestring ^>=0.12,
        containers ^>=0.6,
        directory ^>=1.3,
        filepath ^>=1.5,
        hs-spanshot,
        hspec ^>=2.11,
        network ^>=3.1,
        process ^>=1.6,
        QuickCheck ^>=2.14,
        quickcheck-instances ^>=0.3,
        stm ^>=2.5,
        streaming ^>=0.2,
        tasty ^>=1.5,
        tasty-hspec ^>=1.2.0.4,
        tasty-hunit ^>=0.10,
        tasty-quickcheck ^>=0.11,
        temporary ^>=1.3,
        text ^>=2.1,
        time ^>=1.12,
        yaml ^>=0.11

test-suite hs-spanshot-integration-cli
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          CLIIntegration.hs
    build-depends:
        base >=4.19.2.0 && <5,
        aeson ^>=2.2,
        bytestring ^>=0.12,
        directory ^>=1.3,
        filepath ^>=1.5,
        process ^>=1.6,
        tasty ^>=1.5,
        tasty-hunit ^>=0.10,
        temporary ^>=1.3,
        text ^>=2.1
    build-tool-depends: hs-spanshot:spanshot
